# Terminus-Coin

./: .gitignore  Anchor.toml  MAINNET_CHECKLIST.md  README.md  RELAYER_OPERATOR.md  package.json  tsconfig.json
.github/workflows/: ci.yml
metadata/: README.md  term.json
miner-ui/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
miner-ui/api/: _relayer.ts  debug.ts  health.ts  relay.ts  relayer-info.ts  topup.ts
miner-ui/idl/: terminuscoin.json
miner-ui/src/: App.tsx  burnerWallet.ts  main.tsx  miner.worker.ts  relayerAdapter.ts  stakingActions.ts  terminal.css  useChainState.ts  useMiner.ts  useStaking.ts
programs/terminuscoin/: Cargo.toml
programs/terminuscoin/src/: lib.rs
scripts/: claim_team_vest.ts  create_metadata.ts  devnet-launch.sh  initialize_vesting.ts  measure_cu.ts  pow_demo.ts  set_rate_limit.ts
tests/: terminus-coin.ts
